# NumericRepresentations_beta

./: .clang-format  .gitignore  AccesoATúnelRemoto.txt  CMakeLists.txt  CMakeLists.txt.backup  CMakeListsTest.txt  CMakeSettings.json  CTestCustom.cmake  CTestTestfile.cmake  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  Makefile.multi  Makefile.simple  NumericRepresentations.sln  NumericRepresentations.vcxproj  NumericRepresentations.vcxproj.filters  PARSING_SERIALIZATION_IMPROVEMENTS.md  README.md  REFERENCIA_RAPIDA.md  SOLUCION_UINT8_VISUALIZACION.md  TESTING_COVERAGE.md  TESTS_REVISION_12NOV2025.md  VALIDACION_COMPLETADA.cpp  add_to_gitignore.bash  analisis_inconsistencia_signo.cpp  analisis_msvc_metaprogramacion.cpp  build.sh  build_and_test_matrix.ps1  build_msvc.bat  build_msys2.bat  compile_advanced_edge_tests.bat  compile_arithmetic_suite.bat  compile_auxiliary_functions.bat  compile_auxiliary_functions_comprehensive.bat  compile_basic.bat  compile_basic_construct.bat  compile_basic_types_comprehensive.bat  compile_bitwise_suite.bat  compile_boolean_queries.bat  (+144 more)
$BUILD_DIR/: CMakeCache.txt
.cache/clangd/index/: auxiliary_functions.hpp.1E9C17578DDD8E97.idx  auxiliary_types.hpp.7F628EA107CCBB61.idx  basic_types.hpp.F3E6927115AC1558.idx  dig_t.hpp.19FE23B97DEF4BA4.idx  int_reg_digs_t.hpp.3F426387F15EED71.idx  nat_reg_digs_t.hpp.A4DB10E8E795B13B.idx  reg_digs_t.hpp.9BBC28D6BC05CDE4.idx  test_arithmetic_operators.cpp.0893034365C68FB2.idx  test_assignment_operators.cpp.115FF47FECFD7C72.idx  test_basic.cpp.823B238A379F42AD.idx  test_basic_methods.cpp.7E7931A1FA659085.idx  test_comparison_operators.cpp.23798869448989B2.idx  test_factory_methods.cpp.DDD82A6D102C7742.idx  test_int_basic_methods.cpp.D866FFE6980837E7.idx  test_int_ultra_minimal.cpp.3059971FC190F908.idx  test_io_operations.cpp.3EEC9FC8D5AF20D1.idx  test_minimal_constructors.cpp.684C4B7B5436BD27.idx  test_minimal_factory.cpp.3487FDF067EAB6C0.idx  test_set_operations.cpp.4DDEECFB8FA5492F.idx  utilities.hpp.CDA4BFDF8C5CE210.idx
.github/workflows/: main.yml
build-clang/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-clang/Testing/Temporary/: CTestCostData.txt
build-clang/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-gcc/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-gcc/Testing/Temporary/: CTestCostData.txt
build-gcc/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-msvc/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build-msvc/Testing/Temporary/: CTestCostData.txt
build-msvc/tests/: CTestTestfile.cmake  cmake_install.cmake
build_tests/gcc/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_tests/gcc/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
carpeta-museo/: README.md  TplMp_typelist_t.hxx
include/: auxiliary_functions.hpp  auxiliary_types.hpp  base_num_t.hpp  basic_types.hpp  dig_t.hpp  dig_t_display_helpers.hpp  digit_variant_t.hpp  int_num_t.hpp  int_num_t.hpp.old  int_reg_digs_t.hpp  memory_handler.hpp  nat_num_t.hpp  nat_num_t.hpp.corrupt_backup  nat_num_t.hpp.duplicated  nat_num_t.hpp.old  nat_rat_fixed_reg_t.hpp  nat_rat_num_t.hpp  nat_reg_digs_t.hpp  rat_fixed_reg_t.hpp  rat_num_t.hpp  reg_digs_t.hpp  register_variant_t.hpp  testunit.hpp  util_functs.hpp  utilities.hpp  variant_types.hpp  varlist_definitions.hpp
include/core/: dig_t.hpp
include/core/internal/: auxiliary_functions.hpp  auxiliary_types.hpp  basic_types.hpp  util_functs.hpp  utilities.hpp
local_libs/lib/cmake/Catch2/: Catch2Targets.cmake
local_libs/share/pkgconfig/: catch2-with-main.pc  catch2.pc
scripts/: build.ps1  build.sh  build_clang_gcc.sh  build_msvc.bat  build_simple.ps1  compile.bat  compile_all_clang.bat  compile_all_clang.sh  compile_all_clang_msys2.bat  compile_all_gcc.bat  compile_all_gcc.sh  compile_all_gcc_msys2.bat  compile_comprehensive_suite.bat  compile_io_simple.bat  compile_io_suite.bat  debug_gcc.bat  setup_dev_env.ps1  validate_all_compilers.bat  validate_with_msvc.bat
src/: .autotools  .cproject  .project  compile_flags.txt  digit_variant_t.cpp  get.cpp  incrementos.cpp  main.cpp  make_register_variant.cpp  memory_handler.cpp  opera_y_asigna.cpp  register_variant_t.cpp  show_and_strings.cpp  test_driver.cpp
tests/: CMakeLists.txt  build_and_run_tests.ps1  build_and_run_tests.sh  run_all_tests.cpp  test_auxiliary_functions.cpp  test_auxiliary_functions_comprehensive.cpp  test_auxiliary_types.cpp  test_basic.cpp  test_basic_types.cpp  test_basic_types_comprehensive.cpp  test_boolean_queries.cpp  test_compilation.cpp  test_core_internal_comprehensive.cpp  test_core_only.cpp  test_dig_t.cpp  test_dig_t_arithmetic.cpp  test_dig_t_basic_construct.cpp  test_dig_t_bitwise.cpp  test_dig_t_comparison.cpp  test_dig_t_comparison_debug.cpp  test_dig_t_comprehensive.cpp  test_dig_t_constructors.cpp  test_dig_t_io.cpp  test_dig_t_io_simple.cpp  test_dig_t_operations.cpp  test_dig_t_simple.cpp  test_dig_t_simple_construct.cpp  test_fast_exponentiation.cpp  test_for_ct.cpp  test_from_functions_check.cpp  test_hello_gcc.cpp  test_increment_decrement.cpp  test_iostream_only.cpp  test_make_digit.cpp  test_minimal_dig.cpp  test_minimal_gcc.cpp  test_mult_inv_optimized.cpp  test_pack2array.cpp  test_parse_ct_4formats.cpp  test_parse_formats.cpp  (+6 more)
tests/catch2/: catch.hpp
